fix: offset action bar to avoid overlapping output scrollbar

--- a/src/vs/workbench/contrib/positronNotebook/browser/notebookCells/CellOutputActionBar.css
+++ b/src/vs/workbench/contrib/positronNotebook/browser/notebookCells/CellOutputActionBar.css
@@ -7,7 +7,7 @@
 .cell-output-action-bar {
 	position: absolute;
 	top: 0.25rem;
-	right: 0.25rem;
+	right: calc(0.25rem + 8px); /* 8px to clear the scrollbar */
 	z-index: 10;
 
 	display: flex;
